--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: detect
 Type: Package
 Title: Analyzing Wildlife Data with Detection Error
-Version: 0.3-2
-Date: 2014-05-15
+Version: 0.3-3
+Date: 2015-05-15
 Author: Peter Solymos, Monica Moreno, Subhash R Lele
 Maintainer: Peter Solymos <solymos@ualberta.ca>
 Depends: R (>= 2.13.0), Formula, stats4
@@ -13,6 +13,6 @@ Description: The package implements models to analyze
   Alberta Biodiversity Monitoring Institute (ABMI)
   and the Boreal Avian Modelling (BAM) Project.
 License: GPL-2
-URL: http://dcr.r-forge.r-project.org/
+URL: URL: http://cran.r-project.org/package=detect, https://github.com/psolymos/detect
 LazyLoad: yes
 LazyData: true
