--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,17 +2,16 @@ Package: detect
 Type: Package
 Title: Analyzing Wildlife Data with Detection Error
 Version: 0.3-3
-Date: 2015-05-15
+Date: 2015-10-22
 Author: Peter Solymos, Monica Moreno, Subhash R Lele
 Maintainer: Peter Solymos <solymos@ualberta.ca>
 Depends: R (>= 2.13.0), Formula, stats4
 Suggests: dclone, dcmle, pbapply
-Description: The package implements models to analyze
-  site occupancy and count data models with detection error.
-  The package development was supported by the 
+Description: Models for analyzing site occupancy and count data models
+  with detection error. The package development was supported by the
   Alberta Biodiversity Monitoring Institute (ABMI)
   and the Boreal Avian Modelling (BAM) Project.
 License: GPL-2
-URL: URL: http://cran.r-project.org/package=detect, https://github.com/psolymos/detect
+URL: https://github.com/psolymos/detect
 LazyLoad: yes
 LazyData: true
