--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,6 @@
 language: r
 sudo: required
+before_install:
+  - sudo add-apt-repository ppa:marutter/rrutter -y
+  - sudo apt-get update -q
+  - sudo apt-get install r-cran-rjags -y
