--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,6 @@
 ## import from other packages
 importFrom("Formula", "Formula", "model.part")
-#importFrom("pbapply", "pbapply", "pblapply")
+importFrom("pbapply", "pblapply", "pbsapply")
 importFrom("stats4", "mle")
 #importFrom("dclone", "dcsd")
 #importFrom("dcmle", "makeDcFit", "gelman.diag")
