--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,15 +2,17 @@ Package: detect
 Type: Package
 Title: Analyzing Wildlife Data with Detection Error
 Version: 0.3-3
-Date: 2015-10-22
-Author: Peter Solymos, Monica Moreno, Subhash R Lele
+Date: 2016-03-02
+Author: Peter Solymos[cre,aut], Monica Moreno [aut], Subhash R Lele [aut]
 Maintainer: Peter Solymos <solymos@ualberta.ca>
 Depends: R (>= 2.13.0), Formula, stats4, pbapply
 Suggests: dclone, dcmle
 Description: Models for analyzing site occupancy and count data models
-  with detection error. The package development was supported by the
-  Alberta Biodiversity Monitoring Institute (ABMI)
-  and the Boreal Avian Modelling (BAM) Project.
+  with detection error, including single-visit based models,
+  conditional distance sampling and time-removal models.
+  Package development was supported by the
+  Alberta Biodiversity Monitoring Institute (www.abmi.ca)
+  and the Boreal Avian Modelling Project (borealbirds.ca).
 License: GPL-2
 URL: https://github.com/psolymos/detect
 BugReports: https://github.com/psolymos/detect/issues
