--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Analyzing Wildlife Data with Detection Error
 Version: 0.4-0
 Date: 2016-03-02
-Author: Peter Solymos[cre,aut], Monica Moreno [aut], Subhash R Lele [aut]
+Author: Peter Solymos [cre, aut], Monica Moreno [aut], Subhash R. Lele [aut]
 Maintainer: Peter Solymos <solymos@ualberta.ca>
 Depends: R (>= 2.13.0), Formula, stats4, pbapply
 Suggests: dclone, dcmle
