--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,7 @@ before_install:
   - sudo add-apt-repository ppa:marutter/rrutter -y
   - sudo apt-get update -q
   - sudo apt-get install r-cran-rjags -y
+r_packages:
+  - covr
+after_success:
+  - Rscript -e 'library(covr);codecov()'
