--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,4 +84,6 @@ S3method("summary", "cmulti")
 S3method("print", "summary.cmulti")
 S3method("logLik", "cmulti")
 S3method("fitted", "cmulti")
+S3method("model.frame", "cmulti")
+S3method("model.matrix", "cmulti")
 
