documenting and example

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,4 +86,5 @@ S3method("logLik", "cmulti")
 S3method("fitted", "cmulti")
 S3method("model.frame", "cmulti")
 S3method("model.matrix", "cmulti")
+S3method("predict", "cmulti")
 
