--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: detect
 Type: Package
 Title: Analyzing Wildlife Data with Detection Error
-Version: 0.4-3
-Date: 2020-08-11
+Version: 0.4-4
+Date: 2020-08-12
 Author: Peter Solymos [cre, aut], Monica Moreno [aut], Subhash R. Lele [aut]
 Maintainer: Peter Solymos <solymos@ualberta.ca>
 Depends: R (>= 2.13.0), Formula, stats4, pbapply
@@ -12,8 +12,8 @@ Description: Models for analyzing site occupancy and count data models
   with detection error, including single-visit based models,
   conditional distance sampling and time-removal models.
   Package development was supported by the
-  Alberta Biodiversity Monitoring Institute (www.abmi.ca)
-  and the Boreal Avian Modelling Project (borealbirds.ca).
+  Alberta Biodiversity Monitoring Institute (<https://www.abmi.ca>)
+  and the Boreal Avian Modelling Project (<https://borealbirds.ualberta.ca>).
 License: GPL-2
 URL: https://github.com/psolymos/detect
 BugReports: https://github.com/psolymos/detect/issues
