--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: detect
 Type: Package
 Title: Analyzing Wildlife Data with Detection Error
-Version: 0.4-5
-Date: 2022-11-07
+Version: 0.4-6
+Date: 2023-03-08
 Author: Peter Solymos [cre, aut], Monica Moreno [aut], Subhash R. Lele [aut]
-Maintainer: Peter Solymos <solymos@ualberta.ca>
+Maintainer: Peter Solymos <psolymos@gmail.com>
 Depends: R (>= 2.13.0), Formula, stats4, pbapply
 Imports: Matrix
 Suggests: dclone, dcmle
